src/styles/_dark.scss
@media (prefers-color-scheme: dark) {
    body {
        background-color: #121212;
        color: rgb(239, 239, 239);
    }

    ::selection {
        color: white;
    }

    header {
        background-color: #1e1e1e;

        a.logo h1 svg path {
            fill: $accent;
        }
    }

    main.allDogs {
        .accordion-content {
            background-color: #121212;
        }

        button.accordion {
            color: #e1e1e1;

            svg path {
                fill: #e1e1e1
            }
        }

        
    }

    .breedGrid {
        .breedBlock {
                h4 {
                    background-color: #191919aa;
                    color: rgb(243, 243, 243);
                }
            }
    }

    #panel {
        background-color: #2c2c2c;

        .list #items li {
            .breed {
                background-color: #373737;

                &:hover {
                    background-color: #393939;
                }
            }

            &:hover .breed {
                background-color: #393939;
            }
        } 

        input {
            background-color: #3f3f3f;
            color: white;
        }

        .saveList #share .socialContainer a.socialBlock {
            background-color: #3f3f3f;
            color: #fff;
            border: 1px solid rgba(80, 89, 98, .1);

            &:hover {
                background-color: rgb(75, 75, 75);
            }
        }
    }

    .styled-table tbody tr {
        border-bottom: 0;

        &:nth-of-type(2n) {
            background-color: #373737;
            border-bottom: 0;
        }
    }

    .notice .container {
        background-color: #1e1e1e;
    }
}

